--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@
 /* Color Set */
 :root {
   --primary: #04b104;
-  --secondary: #dacc0c;
+  --secondary: green;
   --warning: rgb(212, 36, 4);
   --success: rgb(236, 241, 233);
   --danger: rgba(212, 210, 210, 0.25);
