--- a/css/extra.css
+++ b/css/extra.css
@@ -9772,7 +9772,7 @@ fieldset:disabled .btn {
 
 .text-secondary {
     --bs-text-opacity: 1;
-    color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+    color: green !important;
 }
 
 .text-success {
