--- a/css/custom.css
+++ b/css/custom.css
@@ -351,7 +351,7 @@ nav {
 @media (max-width: 1200px) {
   nav {
     background: none;
-    background-color: var(--primary);
+    background-color: var(--white);
   }
 }
 
